--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,7 +3,7 @@ name: Continuous Deployment for Iris
 on:
   push:
     branches:
-      - main
+      - master
 
 env:
   GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
